# vibes

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
bourne/include/: bourne.h
bourne/include/bourne/: config.h  logging.h  network.h  query.h  service.h  storage.h  threading.h
bourne/service/: bourne_service.c
bourne/src/: bourne.c  config.c  network.c  query.c  service.c  storage.c  threading.c
data/: sample_records.json
deer/app/: deer_app.c
deer/include/: deer.h
deer/include/deer/: client.h  sample_data.h  ui_config.h  ui_layout.h
deer/src/: client.c  deer.c  sample_data.c  ui_config.c  ui_layout.c
tests/: CMakeLists.txt  test_bourne_config.c  test_bourne_query_parser.c  test_bourne_storage_search.c  test_bourne_storage_store.c  test_deer_client_connection.c  test_deer_config.c
